라우터 및 스타일 시트 위치 변경

--- a/style.css
+++ b/style.css
@@ -108,5 +108,7 @@ footer {
 
 #FaceCam > a {
     padding: 10px;
-    background-color: aqua;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
 }
