--- a/style.css
+++ b/style.css
@@ -112,3 +112,26 @@ footer {
     color: white;
     border-radius: 10px;
 }
+
+.mainPage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: calc(100vh - 90px);
+}
+
+.mainPage > div {
+  width: 70%;
+  background-color: aqua;
+}
+
+.mainPage h1,
+.mainPage p {
+  text-align: center;
+}
+
+.main_img img {
+  width: 300px;
+  height: 300px;
+}
